--- a/style.css
+++ b/style.css
@@ -8,24 +8,24 @@ body {
   color: #333;
   font-family: lato, sans-serif;
 }
-.aaa {
+.footer {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.footer img {
   width: 100%;
 }
-.aaa .more-inf {
+.footer .footer-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+  .footer { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 400px;
   margin: 0 auto 0;
@@ -130,7 +130,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#section-done label {
   text-decoration: line-through
   color: #888;
 }
