--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Basic Style */
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 body {
@@ -118,7 +118,7 @@ li > label {
   width: 226px;
 }
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .button-delete:hover {
   color: #cf2323;
@@ -134,18 +134,18 @@ li >    input[type="text"] {
 
 /* Completed */
 #section-done label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 li input[type=text] {
-  display: none
+  display: none;
 }
 
 .edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode label {
