--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ button:hover {
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -108,6 +107,7 @@ label[for="new-task"] {
 }
 
 #new-task {
+  margin-top: 20px;
   width: 318px;
 }
 
